--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
   "name": "valist-software-license",
   "version": "0.0.1",
-  "description": "create-web3 monorepo quickstart with next and hardhat",
+  "description": "Valist software license NFT",
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "yarn workspace @create-web3/frontend dev",
-    "build": "yarn workspace @create-web3/frontend build",
-    "start": "yarn workspace @create-web3/frontend start",
-    "lint": "yarn workspace @create-web3/frontend lint",
-    "chain": "yarn workspace @create-web3/backend chain",
-    "compile": "yarn workspace @create-web3/backend compile",
-    "test": "yarn workspace @create-web3/backend test",
-    "clean": "yarn workspace @create-web3/backend clean",
-    "deploy": "yarn workspace @create-web3/backend deploy"
+    "dev": "yarn workspace token-gating-dapp dev",
+    "build": "yarn workspace token-gating-dapp build",
+    "start": "yarn workspace token-gating-dapp start",
+    "lint": "yarn workspace token-gating-dapp lint"
   },
   "workspaces": {
     "packages": [
       "packages/*"
     ],
-    "nohoist": [
-      "**/@graphprotocol/graph-ts",
-      "**/@graphprotocol/graph-ts/**",
-      "**/backend",
-      "**/backend/**"
-    ]
+    "nohoist": []
   }
 }
