--- a/packages/token-gating-dapp/package.json
+++ b/packages/token-gating-dapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@create-web3/frontend",
+  "name": "token-gating-dapp",
   "version": "0.1.0",
   "description": "",
   "private": true,
