--- a/packages/token-gating-dapp/package.json
+++ b/packages/token-gating-dapp/package.json
@@ -10,15 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@rainbow-me/rainbowkit": "^0.7.4",
+    "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^6.4.3",
     "next": "^13.0.2",
+    "next-auth": "^4.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
+    "siwe": "^2.1.3",
     "wagmi": "^0.7.13"
   },
   "devDependencies": {
