--- a/packages/token-gating-dapp/package.json
+++ b/packages/token-gating-dapp/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.6.0",
     "react-toastify": "^9.1.1",
     "siwe": "^2.1.3",
+    "valist-software-license": "^0.0.2",
     "wagmi": "^0.7.13"
   },
   "devDependencies": {
