fixing sdk installation issue

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
       "packages/*"
     ],
     "nohoist": []
+  },
+  "dependencies": {
+    "valist-software-license": "https://registry.npmjs.org/valist-software-license/-/valist-software-license-0.0.2.tgz"
   }
 }
