--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "yarn workspace token-gating-dapp dev",
-    "build": "yarn workspace token-gating-dapp build",
-    "start": "yarn workspace token-gating-dapp start",
-    "lint": "yarn workspace token-gating-dapp lint",
+    "dev": "yarn workspace license-gated-dapp dev",
+    "build": "yarn workspace license-gated-dapp build",
+    "start": "yarn workspace license-gated-dapp start",
+    "lint": "yarn workspace license-gated-dapp lint",
     "build-sdk": "yarn workspace valist-software-license build"
   },
   "workspaces": {
