--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
       "packages/*"
     ],
     "nohoist": []
+  },
+  "resolutions": {
+    "valist-software-license": "https://registry.npmjs.org/valist-software-license/-/valist-software-license-0.0.4.tgz"
   }
 }
