--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "resolutions": {
     "valist-software-license": "https://registry.npmjs.org/valist-software-license/-/valist-software-license-0.0.4.tgz"
+  },
+  "dependencies": {
+    "valist-software-license": "https://registry.npmjs.org/valist-software-license/-/valist-software-license-0.0.4.tgz"
   }
 }
