fixing yarn workspace issue

--- a/package.json
+++ b/package.json
@@ -17,12 +17,6 @@
     "doc:publish": "yarn workspace valist-software-license doc:publish"
   },
   "workspaces": {
-    "packages": [
-      "packages/*"
-    ],
-    "nohoist": []
-  },
-  "resolutions": {
-    "valist-software-license": "https://registry.npmjs.org/valist-software-license/-/valist-software-license-0.0.5.tgz"
+    "packages":["packages/*"]
   }
 }
